--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ description = "Rust bindings to the mobile instagram API"
 documentation = "https://docs.rs/goofy"
 license = "MIT"
 repository = "https://github.com/yvessavoy/goofy"
+keywords = ["instagram", "api"]
 
 [dependencies]
 reqwest = { version = "0.10", features = ["json", "cookies", "blocking"] }
