--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,3 +25,6 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+      env:
+        GOOFY_USER: ${{ secrets.GoofyUser }}
+        GOOFY_PASS: ${{ secrets.GoofyPass }}
