--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,9 @@ jobs:
 
     - name: Test
       run: cargo test
+      env:
+        GOOFY_USER: foo
+        GOOFY_PASS: bar
   
     - name: Clippy
       run: |
