Fix errors in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,11 +30,7 @@ jobs:
       run: cargo test
   
     - name: Clippy
-      run: |
-        rustup component add clippy
-        cargo clippy --all-targets --all-features -- -D warnings
+      run: cargo clippy --all-targets --all-features -- -D warnings
         
     - name: Formatting
-      run: |
-        rustup component add rustfmt
-        cargo fmt --check # with --check, rustfmt exits with code 1 if formatting changes are found
+      run: cargo fmt -- --check # with --check, rustfmt exits with code 1 if formatting changes are found
